# pdf2llm

./: LICENSE  README.md  pyproject.toml
src/pdf2llm/: __init__.py  contents.py  debug.py  layout.py  reading_order.py  search.py  vectorstore.py
src/pdf2llm/lp/: config_large.yml
